code/examples/stderr/misc_9_3.stderr
error[E0423]: expected value, found struct `Struct`
 --> examples/misc_9_3.rs:9:5
  |
4 | struct Struct {}
  | ---------------- `Struct` defined here
...
9 |     Struct = loop {};
  |     ^^^^^^ help: use struct literal syntax instead: `Struct {}`

error[E0070]: invalid left-hand side of assignment
  --> examples/misc_9_3.rs:10:11
   |
10 |     Tuple = loop {};
   |     ----- ^
   |     |
   |     cannot assign to this expression

Some errors have detailed explanations: E0070, E0423.
For more information about an error, try `rustc --explain E0070`.
error: could not compile `code` (example "misc_9_3") due to 2 previous errors
